--- a/style.css
+++ b/style.css
@@ -115,6 +115,32 @@ body {
   top: -43px;
 }
 
+.code-input {
+  position: relative;
+
+}
+
+.clear-code-btn {
+  position: absolute;
+  top: -46px;
+  right: 0px;
+
+  border-radius: 5px;
+  font-weight: 600;
+  background: #F2620F;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.1s ease;
+  padding: 8px 15px;
+  box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+   7px 7px 20px 0px rgba(0,0,0,.1),
+   4px 4px 5px 0px rgba(0,0,0,.1);
+}
+
+
+
 /*-------------- notification ---------------------- */
 
 #notification {
