--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 /* 15 */
 .btn-15 {
-  background: #b621fe;
+  background: #08cd14;
   border: none;
   z-index: 1;
 }
@@ -48,7 +48,7 @@ body {
   top: 0;
   right: 0;
   z-index: -1;
-  background-color: #663dff;
+  background-color: #08cd14;
   border-radius: 5px;
    box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
    7px 7px 20px 0px rgba(0,0,0,.1),
@@ -89,10 +89,10 @@ body {
   position: absolute;
   top: -46px;
   right: 0px;
-
+  color:#fff;
   border-radius: 5px;
   font-weight: 600;
-  background: #F2620F;
+  background: #0b27f5;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -131,7 +131,8 @@ body {
 
   border-radius: 5px;
   font-weight: 600;
-  background: #F2620F;
+  background: #f64545;
+  color:#fff;
   display: flex;
   align-items: center;
   justify-content: center;
