--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,10 @@ body {
 }
 .code-btn {
   padding: 40px 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
 }
 .clear-code-btn {
   position: absolute;
